# SARS-CoV-2-deconvolution

./: CMakeLists.txt  FindGUROBI.cmake  README.md
data/: Illumina_results.csv  Illumina_results_shared.csv  final_alt_results.csv  final_alt_results.tsv  final_ref_results.csv  final_ref_results.tsv  final_vaf_results.csv  final_vaf_results.tsv
data/simulations/: generate.sh  s0_M0.1_k10_alt.tsv  s0_M0.1_k10_ref.tsv  s0_M0.1_k10_vaf.tsv  s0_M0.1_k5_B.tsv  s0_M0.1_k5_alt.tsv  s0_M0.1_k5_ref.tsv  s0_M0.1_k5_vaf.tsv  s0_M0_k10_B.tsv  s0_M0_k10_U.tsv  s0_M0_k10_alt.tsv  s0_M0_k10_ref.tsv  (+324 more)
data_illumina_April8/: SRR10948474.tsv  SRR11059940.tsv  SRR11059942.tsv  SRR11059943.tsv  SRR11059944.tsv  SRR11059945.tsv  SRR11059946.tsv  SRR11059947.tsv  SRR11092062.tsv  SRR11140744.tsv  SRR11140745.tsv  SRR11140746.tsv  SRR11140747.tsv  SRR11140749.tsv  SRR11140750.tsv  SRR11140751.tsv  SRR11177792.tsv  SRR11178051.tsv  SRR11178052.tsv  SRR11178053.tsv  SRR11178054.tsv  SRR11178055.tsv  SRR11178056.tsv  SRR11178057.tsv  SRR11241254.tsv  SRR11241255.tsv  SRR11247076.tsv  SRR11247077.tsv  SRR11247078.tsv  SRR11267570.tsv  SRR11278091.tsv  SRR11278164.tsv  SRR11278166.tsv  SRR11278167.tsv  SRR11300652.tsv  SRR11314339.tsv  SRR11393273.tsv  SRR11393274.tsv  SRR11393275.tsv  SRR11393276.tsv  (+424 more)
data_testing/: final_alt_results.tsv  final_ref_results.tsv  final_vaf_results.tsv  sample_summary.tsv
new_data_illumina_April8_reduced/: final_alt_results.tsv  final_ref_results.tsv  final_vaf_results.tsv  sample_summary.tsv
results/: Bancestral_annotated.tsv  Bexpansion_renamed.tsv  README.md  SRA_exposure_results_cummulative.xlsx  analyze_real.ipynb  analyze_sims.ipynb  clade_dict.csv  new_real_data_reduced_k25_S11_Bcollapsed.fasta  new_real_data_reduced_k25_S11_Bcollapsed.tsv  new_real_data_reduced_k25_S11_Ucollapsed.tsv  new_strain_mutation_dict.csv  new_training_exposure_results_summary.tsv  strain_mutation_dict.csv  strain_mutation_dict.txt  testing_expansion_sample_strain_dict.txt  testing_exposure_alt.tsv  testing_exposure_metadata.tsv  testing_exposure_ref.tsv  testing_exposure_results_F.tsv  testing_exposure_results_U.tsv  testing_exposure_results_summary.tsv  testing_exposure_results_summary_cummulative.xlsx  testing_locations.txt  training_alt_reduced.tsv  training_expansion_sample_strain_dict.txt  training_exposure_alt.tsv  training_exposure_ref.tsv  training_exposure_results_F.tsv  training_exposure_results_U.tsv  training_exposure_results_cummulative.xlsx  training_exposure_results_summary.tsv  training_ref_reduced.tsv
results_L1/: sweep_filtered.tsv  sweep_k10_B.tsv  sweep_k10_F.tsv  sweep_k10_U.tsv  sweep_k11_B.tsv  sweep_k11_F.tsv  sweep_k11_U.tsv  sweep_k12_B.tsv  sweep_k12_F.tsv  sweep_k12_U.tsv  sweep_k13_B.tsv  sweep_k13_F.tsv  sweep_k13_U.tsv  sweep_k14_B.tsv  sweep_k14_F.tsv  sweep_k14_U.tsv  sweep_k15_B.tsv  sweep_k15_F.tsv  sweep_k15_U.tsv  sweep_k16_B.tsv  sweep_k16_F.tsv  sweep_k16_U.tsv  sweep_k17_B.tsv  sweep_k17_F.tsv  sweep_k17_U.tsv  sweep_k18_B.tsv  sweep_k18_F.tsv  sweep_k18_U.tsv  sweep_k19_B.tsv  sweep_k19_F.tsv  sweep_k19_U.tsv  sweep_k20_B.tsv  sweep_k20_F.tsv  sweep_k20_U.tsv  sweep_k3_B.tsv  sweep_k4_B.tsv  sweep_k4_F.tsv  sweep_k4_U.tsv  sweep_k5_B.tsv  sweep_k5_F.tsv  (+14 more)
results_L1_subclonal/: sweep_filtered.tsv  sweep_k10_B.tsv  sweep_k10_F.tsv  sweep_k10_U.tsv  sweep_k11_B.tsv  sweep_k11_F.tsv  sweep_k11_U.tsv  sweep_k12_B.tsv  sweep_k12_F.tsv  sweep_k12_U.tsv  sweep_k13_B.tsv  sweep_k13_F.tsv  sweep_k13_U.tsv  sweep_k14_B.tsv  sweep_k14_F.tsv  sweep_k14_U.tsv  sweep_k15_B.tsv  sweep_k15_F.tsv  sweep_k15_U.tsv  sweep_k16_B.tsv  sweep_k16_F.tsv  sweep_k16_U.tsv  sweep_k17_B.tsv  sweep_k17_F.tsv  sweep_k17_U.tsv  sweep_k18_B.tsv  sweep_k18_F.tsv  sweep_k18_U.tsv  sweep_k19_B.tsv  sweep_k19_F.tsv  sweep_k19_U.tsv  sweep_k20_B.tsv  sweep_k20_F.tsv  sweep_k20_U.tsv  sweep_k8_B.tsv  sweep_k8_F.tsv  sweep_k8_U.tsv  sweep_k9_B.tsv  sweep_k9_F.tsv  sweep_k9_U.tsv  (+2 more)
results_binom/: sweep_k10_B.tsv  sweep_k10_F.tsv  sweep_k10_U.tsv  sweep_k12_B.tsv  sweep_k13_B.tsv  sweep_k13_F.tsv  sweep_k13_U.tsv  sweep_k14_B.tsv  sweep_k14_U.tsv  sweep_k15_B.tsv  sweep_k15_F.tsv  sweep_k16_B.tsv  sweep_k17_B.tsv  sweep_k17_U.tsv  sweep_k18_F.tsv  sweep_k18_U.tsv  sweep_k19_U.tsv  sweep_k20_B.tsv  sweep_k20_F.tsv  sweep_k20_U.tsv  sweep_k5_F.tsv  sweep_k6_B.tsv  sweep_k6_F.tsv  sweep_k8_B.tsv  sweep_k8_U.tsv  sweep_log.tsv
src/: dc.cpp  dc.h  deconvolvemain.cpp  exposuremain.cpp  gradientmain.cpp  inputinstance.cpp  inputinstance.h  mergemain.cpp  relaxmain.cpp  simulatemain.cpp  solution.cpp  solution.h  solutionset.cpp  solutionset.h  solver.cpp  solver.h  solverca.cpp  solverca.h  solvercab.cpp  solvercab.h  solvercabl1.cpp  solvercabl1.h  solvercau.cpp  solvercau.h  solvercaul1.cpp  solvercaul1.h  solvercaul2.cpp  solvercaul2.h  solverexposure.cpp  solverexposure.h  solverexposureu.cpp  solverexposureu.h  solvergradient.cpp  solvergradient.h  solvergradientb.cpp  solvergradientb.h  solvergradientu.cpp  solvergradientu.h  solvermilp.cpp  solvermilp.h  (+8 more)
(+32212 files in other folders)
